Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8908

QStaticText does not respect pen set on painter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.7.0
    • GUI: Text handling
    • None
    • d717d2686ecdbeafee1f5cabc6832c8339cfb2b4

    Description

      As a side effect of the text format implementation, QStaticText no longer respects the pen set using QPainter::setPen(). The only way to alter the color of the text is to use rich text.

      drawStaticText() should only set the color if it has been set explicitly for the static text item, which can be detected when recording the items.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes