Respect QPainter::pen() in QPainter::drawStaticText()

QStaticText needs to support changing the pen on the painter to support
rich text, but it should not override the pen unless it has been
explicitly set in the rich text. We do this by marking the pen as dirty
in updateState() when we record the text items.

Task-number: QTBUG-8908
Reviewed-by: Gunnar